clusters/home/apps/external-services/homeassistant-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: external-services
spec:
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: homeassistant
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.200.6
    ports:
      - port: 8123
        protocol: TCP
