clusters/home/apps/external-services/proxmox-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: external-services
spec:
  ports:
    - port: 8006
      targetPort: 8006
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.200.2
    ports:
      - port: 8006
        protocol: TCP
