clusters/home/apps/external-services/truenas-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: truenas
  namespace: external-services
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.200.15
    ports:
      - port: 80
        protocol: TCP
