clusters/home/apps/external-services/proxmox-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox-ingress
  namespace: external-services
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: external-services-insecure-transport@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: proxmox.bytechance.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxmox
                port:
                  number: 8006
  tls:
    - hosts:
        - proxmox.bytechance.dev
      secretName: proxmox-tls
