clusters/home/apps/external-services/proxmox-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox-ingressroute
  namespace: external-services
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`proxmox.bytechance.dev`)
      kind: Rule
      services:
        - name: proxmox
          port: 8006
          serversTransport: insecure-transport
          passHostHeader: true
  tls:
    secretName: proxmox-tls
