clusters/home/apps/external-services/truenas-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truenas-ingress
  namespace: external-services
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: truenas.bytechance.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: truenas
                port:
                  number: 80
  tls:
    - hosts:
        - truenas.bytechance.dev
      secretName: truenas-tls
